Go back to creating an inconsistent DOM and add a null-check elsewhere, because the little mind of the focus code is blown by having no documentElement, apparently.  Bug 341730, r+sr=sicking