content/base/src/nsDocument.cpp
@@ -4837,17 +4837,15 @@ nsDocument::Destroy()
   mIsGoingAway = PR_TRUE;
   DestroyLinkMap();
   for (PRInt32 indx = 0; indx < count; ++indx) {
-    nsIContent* content = mChildren.ChildAt(indx);
-    if (content == mRootContent) {
-      // Null out mRootContent first; this is similar to what RemoveChildAt()
-      // does.
-      mRootContent = nsnull;
-    }
-
-    // XXXbz what about document observer notifications?  We really need to get
-    // rid of this Destroy() method!
-    
-    content->UnbindFromTree();
+    // XXXbz what we _should_ do here is to clear mChildren and null out
+    // mRootContent.  If we did this (or at least the latter), we could remove
+    // the silly null-checks in nsHTMLDocument::MatchLinks.  Unfortunately,
+    // doing that introduces several problems:
+    // 1) Focus issues (see bug 341730).  The fix for bug 303260 may fix these.
+    // 2) Crashes in OnPageHide if it fires after Destroy.  See bug 303260
+    //    comments 9 and 10.
+    // So we're just creating an inconsistent DOM for now and hoping.  :(
+    mChildren.ChildAt(indx)->UnbindFromTree();
   }
 
   // Propagate the out-of-band notification to each PresShell's anonymous
